--- a/index.html
+++ b/index.html
@@ -7,4 +7,20 @@
 </head>
 <body><!-- необязательный контейнер для браузера -->
 <p id="a">registration</p><p id="b">log in</p><!-- текстовый параграф -->
+  
+<form class="c" action="min.php" method="post"><!-- метод отпрвки на серсер post в файл min.php-->
+   <input maxlength="20" class="a" type="text" name="n" placeholder="login" required><br><!-- поле ввода с максимальной дллинной в 20 символов с обязательным заполнением поля-->
+   <input maxlength="20" class="a" type="password" name="m" placeholder="password" required><br><!-- поле ввода с максимальной дллинной в 20 символов с обязательным заполнением поля-->
+   <input class="b" type="submit" name="a" value="confirm"><!-- кнопка отправления-->
+</form>
+  
+    
    
+
+ <form class="c" action="min.php" method="post"><!-- метод отпрвки на серсер post в файл min.php-->
+   <input maxlength="20" class="a" type="text" name="n" placeholder="login" required><br><!-- поле ввода с максимальной дллинной в 20 символов с обязательным заполнением поля-->
+   <input maxlength="20" class="a" type="password" name="m" placeholder="password" required><br><!-- поле ввода с максимальной дллинной в 20 символов с обязательным заполнением поля-->
+   <input class="b" type="submit" name="b" value="confirm"> <!-- кнопка отправления-->
+ </form>    
+</body>
+</html>
